vanilla_security_headers/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route

            # Security headers
            response_headers_to_add:
              - header:
                  key: x-xss-protection
                  value: "1; mode=block"

              - header:
                  key: strict-transport-security
                  value: "max-age=31536000; includeSubDomains; preload"

              - header:
                  key: x-frame-options
                  value: "SAMEORIGIN"

              - header:
                  key:  x-content-type-options
                  value: "nosniff"

              - header:
                  key:  feature-policy
                  value: "autoplay 'none'; camera 'none'"

              - header:
                  key:  x-content-type-options
                  value: "nosniff"

            # How to remove headers
            response_headers_to_remove:
              - accept-ranges

            virtual_hosts:

            - name: local_service
              domains: ["*"]
              routes:

              - match:
                  prefix: "/"
                route:
                  cluster: service_example

          http_filters:
          - name: envoy.router
            config: {}

  clusters:
  - name: service_example
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN

    hosts:
    - socket_address:
        address: service_example
        port_value: 8000
